# MiroShark

./: .build-trigger  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PASSATION.md  backlog.yaml  bassira_apollo_sequences.md  bassira_brand_prompts.md  bassira_design_prompts.md  bassira_linkedin_calendar.md  docker-compose.languagetool.yml  docker-compose.yml  package-lock.json  package.json  ruff.toml
backend/: cli.py  openapi.yaml  pyproject.toml  wsgi.py
backend/app/: __init__.py  config.py  security_headers.py
backend/app/api/: __init__.py  admin.py  admin_branding.py  admin_prompts.py  admin_report_versions.py  admin_reports.py  admin_users.py  calibration.py  client.py  graph.py  intake.py  invitations.py  market_resolutions.py  mcp.py  models.py  observability.py  pdf_export.py  pdf_generation.py  quote.py  report.py  report_delivery.py  research.py  settings.py  simulation.py  stripe_checkout.py  templates.py
backend/app/auth/: __init__.py  decorators.py  jwt_verifier.py  supabase_client.py
backend/app/models/: project.py  task.py
backend/app/models_data/: allocation-fonds-strategique.json  budget-loi-finances.json  campus-controversy.json  corporate-crisis.json  crisis-drill-24h.json  fusion-bancaire-mena.json  historical-whatif.json  implantation-startup.json  lancement-diaspora-eu.json  pmf-startup-tech.json  political-debate.json  product-launch.json  she-start-cohort.json  stress-test-politique.json
backend/app/preset_templates/: README.md  adcheck_pre_launch.json  allocation_fonds_strategique.json  budget_loi_finances.json  choix_implantation_startup.json  crisis_24h_brand.json  fusion_bancaire_maroc.json  lancement_produit_diaspora_europe.json  pmf_startup_tech.json  policy_brief_stress.json  primaires_parti_politique.json  product_launch_v2.json  she_start_cohort_replay.json
backend/app/preset_templates/adcheck_pre_launch/: 01_attachment.md  02_engine.md  README.md
backend/app/preset_templates/allocation_fonds_strategique/: 01_attachment.md  02_engine.md  README.md
backend/app/preset_templates/budget_loi_finances/: 01_attachment.md  02_engine.md  README.md
backend/app/preset_templates/choix_implantation_startup/: 01_attachment.md  02_engine.md  README.md
backend/app/preset_templates/crisis_24h_brand/: 01_attachment.md  02_engine.md  README.md
backend/app/preset_templates/fusion_bancaire_maroc/: 01_attachment.md  02_engine.md  README.md
backend/app/preset_templates/lancement_produit_diaspora_europe/: 01_attachment.md  02_engine.md  README.md
backend/app/preset_templates/pmf_startup_tech/: 01_attachment.md  02_engine.md  README.md
backend/app/preset_templates/policy_brief_stress/: 01_attachment.md  02_engine.md  README.md
backend/app/preset_templates/primaires_parti_politique/: 01_attachment.md  02_engine.md  README.md
backend/app/preset_templates/product_launch_v2/: 01_attachment.md  02_engine.md  README.md
backend/app/preset_templates/she_start_cohort_replay/: README.md  personas.md  seed_template.md
backend/app/services/: arena_registry.py  arena_routing.py  artifact_storage.py  client_account_service.py  email_service.py  entity_refiner.py  esco_client.py  graph_tools.py  intake_service.py  kairos_proxy.py  market_resolution_oracle.py  market_resolution_service.py  ontology_generator.py  org_invitations.py  pdf_branding.py  prompt_admin_service.py  prompt_golden_sets.py  prompt_registry.py  push_notification_service.py  quote_admin_service.py  quote_ownership.py  quote_service.py  replay_gif.py  report_agent.py  report_delivery.py  report_editorial.py  report_workflow.py  share_card.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  stripe_service.py  text_processor.py  web_enrichment.py  webhook_service.py  wonderwall_profile_generator.py
backend/app/services/report_pdf/: __init__.py  _style.py  anonymizer.py  charts.py  enricher.py  loader.py  (+7 more)
backend/app/storage/: __init__.py  community_builder.py  embedding_service.py  graph_storage.py  neo4j_storage.py  ner_extractor.py  reranker_service.py
backend/app/utils/: event_logger.py  llm_client.py  locale_prompt.py  retry.py  run_summary.py  url_fetcher.py
backend/app/workers/: pdf_generation_worker.py  report_generation_worker.py  simulation_preparation_worker.py
backend/scripts/: check_legacy_sims_attribution.py  director_events.py  generate_demo_pdfs.py  lint_palette_contrast.py  market_media_bridge.py  reindex_neo4j_embeddings.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_3platform_interconnected.py  test_e2e_api.py  test_full_pipeline.py  test_intake_agent_corpus.py  test_market_generation.py  test_pipeline_phase5_6.py  test_pipeline_twitter_polymarket.py  test_profile_format.py  test_report_generation.py
backend/tests/: README.md  test_admin_users.py  test_charts.py  test_embedding_service_dimensions.py  test_enricher.py  test_enricher_sanitize.py  test_idor.py  test_integration_intake_agent_corpus.py  test_loader_completeness.py  test_locale_prompt.py  test_md_templates.py  test_models_pdf.py  test_pdf_async.py  test_pdf_branding.py  test_pdf_context_loader.py  test_pdf_context_schema.py  test_pdf_export_endpoints.py  test_pdf_pipeline_e2e.py  test_pdf_variants.py  test_pdf_visual_regression.py  test_rate_limits.py  test_reindex_neo4j_embeddings.py  test_renderer.py  test_report_delivery.py  test_report_versions.py  test_report_workflow.py  test_research.py  test_security_headers.py  test_simulation_runner_orphan.py  test_snapshot_watermark.py  test_strategic_options.py  test_templates_render_quality.py  test_text_normalizer_ar.py  test_text_normalizer_en.py  test_text_normalizer_fr.py  test_unit_add_profile.py  test_unit_admin_analytics.py  test_unit_admin_auth.py  test_unit_admin_intake_agent.py  test_unit_admin_organizations.py  (+71 more)
backend/tests/fixtures/: us226_oracle_adversarial.json  us226_oracle_golden.json
backend/wonderwall/environment/: env.py
backend/wonderwall/simulations/: base.py
backend/wonderwall/social_platform/: recsys.py
(+342 files in other folders)
