[project]
name = "miroshark-backend"
version = "0.1.0"
description = "MiroShark - A Simple and Universal Swarm Intelligence Engine, Predicting Anything"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroShark Team" }
]

dependencies = [
    # Core framework
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    "flask-compress>=1.17",
    # LLM related
    "openai>=1.0.0",
    # Neo4j
    "neo4j>=5.15.0",
    # HTTP requests (for Ollama embedding API)
    "requests>=2.31.0",
    # Wonderwall social media simulation (Wonderwall fork)
    # Wonderwall (wonderwall package) is bundled directly in backend/wonderwall/
    # "camel-oasis==0.2.5",  # replaced by bundled Wonderwall
    "camel-ai==0.2.78",
    # Wonderwall runtime dependencies (used by recsys, agent_graph, agents_generator)
    # These are hard imports that crash on startup if missing.
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "igraph>=0.11.0",
    # File processing
    "PyMuPDF>=1.24.0",
    # Encoding detection (supports non-UTF-8 encoded text files)
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    # Utility libraries
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "reportlab>=4.5.0",
    # US-088: Arabic shaping for branded PDF briefs (RTL + glyph contextual forms)
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2",
    # US-092: middleware JWT Supabase + extension ownership multitenant.
    # PyJWT (avec extra `crypto`) gère la vérification HS256 par défaut côté
    # Supabase Auth ; le SDK supabase-py officiel fournit le client admin
    # (clé service_role) qui contourne RLS pour les opérations backend.
    "pyjwt[crypto]>=2.10.0",
    "supabase>=2.7.0",
    # US-104 : envoi d'emails transactionnels (devis, payment link, livraison)
    # via Resend. Best-effort fallback SMTP si la clé n'est pas configurée.
    "resend>=2.0.0",
    # US-122 : ChartFactory matplotlib — rendu charts signature PDF Bassira
    "matplotlib>=3.8",
    "networkx>=3.0",
    # US-125 : Renderer pipeline PDF (MD + WeasyPrint + brand CSS injectable)
    "weasyprint>=60",
    "markdown-it-py>=3",
    "pypdf>=4",
    "pyyaml>=6.0",
    # US-129 : Génération hybride sync/async — queue RQ + Redis
    "rq>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[project.scripts]
# Thin HTTP client for a running MiroShark backend (see backend/cli.py).
# Install via `pip install -e backend/` to get `miroshark-cli` on $PATH.
miroshark-cli = "cli:main"

[tool.uv]
override-dependencies = [
    "pillow>=12.0.0",   # camel-oasis pins 10.3.0 which doesn't build on Python 3.13
    "tiktoken>=0.8.0",  # camel-ai pins 0.7.0 which doesn't build on Python 3.13
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"
asyncio_mode = "auto"
markers = [
    "integration: requires a live MiroShark backend at MIROSHARK_API_URL (run with `pytest -m integration`)",
    "slow: long-running tests (multi-minute E2E simulations)",
    "neo4j: requires a running Neo4j at $NEO4J_URI",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    # US-129 : mock Redis pour les tests async (évite un Redis réel en CI)
    "fakeredis>=2.20",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
