[project]
name = "miroshark-backend"
version = "0.1.0"
description = "MiroShark - A Simple and Universal Swarm Intelligence Engine, Predicting Anything"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroShark Team" }
]

dependencies = [
    # Core framework
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    "flask-compress>=1.17",
    # LLM related
    "openai>=1.0.0",
    # Neo4j
    "neo4j>=5.15.0",
    # HTTP requests (for Ollama embedding API)
    "requests>=2.31.0",
    # Wonderwall social media simulation (Wonderwall fork)
    # Wonderwall (wonderwall package) is bundled directly in backend/wonderwall/
    # "camel-oasis==0.2.5",  # replaced by bundled Wonderwall
    "camel-ai==0.2.78",
    # Wonderwall runtime dependencies (used by recsys, agent_graph, agents_generator)
    # These are hard imports that crash on startup if missing.
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "igraph>=0.11.0",
    # File processing
    "PyMuPDF>=1.24.0",
    # Encoding detection (supports non-UTF-8 encoded text files)
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    # Utility libraries
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "reportlab>=4.5.0",
    # US-088: Arabic shaping for branded PDF briefs (RTL + glyph contextual forms)
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2",
    # US-092: middleware JWT Supabase + extension ownership multitenant.
    # PyJWT (avec extra `crypto`) gère la vérification HS256 par défaut côté
    # Supabase Auth ; le SDK supabase-py officiel fournit le client admin
    # (clé service_role) qui contourne RLS pour les opérations backend.
    "pyjwt[crypto]>=2.10.0",
    "cryptography>=46.0.0",
    "supabase>=2.7.0",
    # US-104 : envoi d'emails transactionnels (devis, payment link, livraison)
    # via Resend. Best-effort fallback SMTP si la clé n'est pas configurée.
    "resend>=2.0.0",
    # US-122 : ChartFactory matplotlib — rendu charts signature PDF Bassira
    "matplotlib>=3.8",
    "networkx>=3.0",
    # US-125 : Renderer pipeline PDF (MD + WeasyPrint + brand CSS injectable)
    "weasyprint>=60",
    "markdown-it-py>=3",
    "pypdf>=4",
    "pyyaml>=6.0",
    # US-129 : Génération hybride sync/async — queue RQ + Redis
    "rq>=1.15",
    # US-136 : Formatage des dates en langage naturel (fr/en/ar) dans les templates PDF
    "babel>=2.14",
    "gunicorn>=26.0.0",
    "jsonschema>=4.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[project.scripts]
# Thin HTTP client for a running MiroShark backend (see backend/cli.py).
# Install via `pip install -e backend/` to get `miroshark-cli` on $PATH.
miroshark-cli = "cli:main"

[tool.uv]
override-dependencies = [
    "pillow>=12.0.0",   # camel-oasis pins 10.3.0 which doesn't build on Python 3.13
    "tiktoken>=0.8.0",  # camel-ai pins 0.7.0 which doesn't build on Python 3.13
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"
asyncio_mode = "auto"
markers = [
    "integration: requires a live MiroShark backend at MIROSHARK_API_URL (run with `pytest -m integration`)",
    "slow: long-running tests (multi-minute E2E simulations)",
    "neo4j: requires a running Neo4j at $NEO4J_URI",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    # US-129 : mock Redis pour les tests async (évite un Redis réel en CI)
    "fakeredis>=2.20",
    "mypy>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
# wonderwall/ = fork amont bundlé (aaronjmars/miroshark) — ne pas reformater,
# ça casserait les futurs merges upstream (US-212).
exclude = ["wonderwall"]

[tool.ruff.lint]
# E4,E7,E9,F = défauts ruff (pyflakes/pycodestyle) — imports inutilisés, noms
# non définis, erreurs de syntaxe : déjà 0 erreur sur tout app/, gate CI
# bloquant dès aujourd'hui. Règles plus larges (UP/I/B/SIM) volontairement
# hors scope US-212 : 3900+ hits sur wonderwall/ (fork amont, cf. ci-dessus).
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
# scripts/ et tests/ font `sys.path.insert(...)` avant les imports pour
# s'exécuter en standalone (hors du package app/) — pattern intentionnel,
# pas une dette. Seul E402 est exempté ; F401/F821/etc. restent bloquants.
"scripts/*.py" = ["E402"]
"tests/*.py" = ["E402"]
# app/__init__.py doit suppresser les warnings resource_tracker AVANT
# d'importer flask/flask_cors (side-effect intentionnel, commenté sur place).
"app/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["wonderwall/"]

# Bootstrap mypy sur un backend jamais typé avant US-212 : 268 erreurs
# trouvées sur app/ au premier run. Root causes systémiques déjà corrigées
# (annotations Blueprint dans app/api/__init__.py, singleton TaskManager,
# app/api/simulation.py et pdf_generation.py intégralement nettoyés).
# Les modules ci-dessous restent EXCLUS explicitement (dette VISIBLE, pas
# supprimée) : 147 erreurs réparties sur 30 fichiers, hors scope proportionné
# pour une story d'outillage face au reste du chantier 16-simulations-v2.
# Ponytail : plafond = cette liste ne doit jamais grandir (RÈGLE N°3 : tout
# fichier touché par une story doit en sortir) ; déclencheur = story de suivi
# dédiée (US-212b, .ralph/prd.json) qui la vide module par module.
[[tool.mypy.overrides]]
module = [
    "app.api.admin_reports",
    "app.api.admin_users",
    "app.api.mcp",
    "app.api.observability",
    "app.api.pdf_export",
    "app.api.report",
    "app.api.settings",
    "app.models.project",
    "app.services.email_service",
    "app.services.graph_memory_updater",
    "app.services.graph_tools",
    "app.services.kairos_proxy",
    "app.services.push_notification_service",
    "app.services.replay_gif",
    "app.services.report_agent",
    "app.services.report_pdf.enricher",
    "app.services.report_pdf.jinja_env",
    "app.services.report_pdf.loader",
    "app.services.share_card",
    "app.services.simulation_ipc",
    "app.services.simulation_runner",
    "app.services.wonderwall_profile_generator",
    "app.storage.embedding_service",
    "app.storage.neo4j_storage",
    "app.storage.ner_extractor",
    "app.storage.reranker_service",
    "app.utils.llm_client",
    "app.utils.retry",
    "app.workers.pdf_generation_worker",
]
ignore_errors = true
